syntax = "proto2";

option java_package = "com.google.transit.realtime";
package transit_realtime;

import "gtfs-realtime.proto";

extend VehicleDescriptor {
	optional bool deviated = 1061 [default = false];
	optional int32 wheelchairAccessible = 1062 [default = 0];
	optional int32 vehicle_type = 1063;
	optional string phone_number = 1064;
	optional string driver_name = 1065;
	optional int32 stop_distance_percent = 1066;
}

extend TripDescriptor {
	optional string block_id = 1066;
}
